--- a/CLI/cortex/Cargo.toml
+++ b/CLI/cortex/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.7", features = ["derive", "string"] }
+lazy_static = "1.5.0"
 nanoid = "0.4.0"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
