--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,6 +9,7 @@ lazy_static = "1.5.0"
 nanoid = "0.4.0"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
+threadpool = "1.8.1"
 
 
 [[bin]]
