--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,10 +6,11 @@ edition = "2021"
 [dependencies]
 clap = { version = "4.5.7", features = ["derive", "string"] }
 lazy_static = "1.5.0"
+mongodb = "3.0.1"
 nanoid = "0.4.0"
 serde = { version = "1.0.204", features = ["derive"] }
 serde_json = "1.0.120"
-threadpool = "1.8.1"
+tokio =  {version = "1.39.3", features = ["full"]}
 
 
 [[bin]]
