--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,6 +5,7 @@ edition = "2021"
 
 [dependencies]
 clap = { version = "4.5.7", features = ["derive", "string"] }
+futures = "0.3.30"
 lazy_static = "1.5.0"
 mongodb = "3.0.1"
 nanoid = "0.4.0"
