--- a/cortex/Cargo.toml
+++ b/cortex/Cargo.toml
@@ -4,3 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+local-ip-address = "0.6.3"
+rand = "0.8.5"
+sha2 = "0.10.8"
+tokio = {version = "1.43.0", features = ["full"]}
