--- a/cortex/Cargo.toml
+++ b/cortex/Cargo.toml
@@ -4,7 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+bincode = "1.3.3"
 local-ip-address = "0.6.3"
 rand = "0.8.5"
+serde = {version = "1.0.217", features = ["derive"]}
 sha2 = "0.10.8"
 tokio = {version = "1.43.0", features = ["full"]}
