--- a/cortex/Cargo.toml
+++ b/cortex/Cargo.toml
@@ -4,11 +4,5 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-bincode = "1.3.3"
-easy-tokio-rustls = "0.1.3"
-local-ip-address = "0.6.3"
-rand = "0.8.5"
-serde = {version = "1.0.217", features = ["derive"]}
-sha2 = "0.10.8"
+libp2p = "0.55.0"
 tokio = {version = "1.43.0", features = ["full"]}
-# tokio-rustls = "0.26.1"
